<resources>
    <string name="app_name">SoccerCounter</string>
    <string name="goal">Gooooal!!!</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="foul">Foul</string>
    <string name="zero">0</string>
    <string name="goals">Goals</string>
    <string name="fouls">Fouls</string>
    <string name="restart">Restart</string>
    <string name="backgroud_image">backgroud_image</string>
    <string name="alert_text">Input the play time in seconds! (default is 10 sec.)</string>
    <string name="ok">OK</string>
    <string name="time_over">Time is over!</string>
</resources>
